background color and buttons updates

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <head>
 	<title>Current Treehouse Status</title>
-  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
-<body style="background-color: pink">
-	<h1>TreeHouse Device listing and status</h1>
+<body style="background-color: #F0F8FF">
+  <div class="container-fluid">
+	<h1>Tree House device listing and status</h1>
 
 	{% for pin in pins %}
 	<p>The {{pins[pin].name }}
 	{% if pins[pin].state == true %}
-		is currently off is currently on <button type="button" class="btn btn-warning"><a href="/{{pin}}/on">turn on</a></button>
+		is currently off <button class="button-on btn"><a href="/{{pin}}/on">turn on</a></button>
 	{% else %}
-		is currently on <button type="button" class="btn btn-success"><a href="/{{pin}}/on">turn off</a></button>
+		is currently on <button class="btn button-off"><a href="/{{pin}}/on">turn off</a></button>
 	{% endif %}
 	</p>
 	{% endfor %}
@@ -21,6 +25,7 @@
 	{% if message %}
 	<h2>{{ message }}</h2>
 	{% endif %}
+  </div>
 
 </body>
 </html>
